crates/test-files/fixtures/compile_errors/call_builtin_object.fe
contract Bar {
    pub fn test() {
        block.foo()
    }
}
